[package]
name = "cryptopals"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.9.0"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
crypto-bigint = "0.7.3"
crypto-primes = "0.7.2"
hex = "0.4.3"
itertools = "0.14.0"
openssl = "0.10.76"
phf = { version = "0.13.1", features = ["macros"] }
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["blocking"] }
