[package]
name = "cryptopals"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.9.0"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
crypto-bigint = "0.7.3"
crypto-primes = "0.7.2"
flate2 = "1.1.9"
hex = "0.4.3"
hmac = "0.13.0"
itertools = "0.14.0"
openssl = "0.10.76"
phf = { version = "0.13.1", features = ["macros"] }
rand = { version = "0.10.1", features = ["alloc"] }
rc4 = "0.2.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
sha2 = "0.11.0"
